--- a/_includes/ProdDesign_pg.html
+++ b/_includes/ProdDesign_pg.html
@@ -59,10 +59,10 @@ div.athc_bx4 {
           </button>
         </form>
        </a>
-  <li><a href="index.html">Home page</a>
-  <li><a href="ProdDesign.html">Product Design</a>
-  <li><a href="CompSci.html">Computer science</a>
-      <li><a href="CompSciGraphics.html">Computer Graphics Work.</a>
+  <li><a href="../index.html">Home page</a>
+  <li><a href="ProdDesign_pg.html">Product Design</a>
+  <li><a href="CompSci_pg.html">Computer science</a>
+      <li><a href="CompSciGraphics_pg.html">Computer Graphics Work.</a>
   <li><a href="links.html">My hobbies: Exibition of me.</a>
 </ul>
 
