--- a/_includes/CompSciGraphics_pg.html
+++ b/_includes/CompSciGraphics_pg.html
@@ -40,13 +40,13 @@
           files.foreach(dispFunction)
 
       </script>
-        <img class="display" src="assets/img/123952925_378322100271065_242517795086135743_n.png">
-       <img class="display" src="assets/img/Cover Page.png">
-       <img class="display" src="assets/img/front.png">
-       <img class="display" src="assets/img/fulllineTexCamel.png">
-         <img class="display" src="assets/img/fullineColourCamel.png">
-          <img class="display" src="assets/img/creaseRenders.png">
-          <img class="display" src="assets/img/fog_Terrain_map_2_birds_eye.png">
+        <img class="display" src="../assets/img/123952925_378322100271065_242517795086135743_n.png">
+       <img class="display" src="../assets/img/Cover Page.png">
+       <img class="display" src="../assets/img/front.png">
+       <img class="display" src="../assets/img/fulllineTexCamel.png">
+         <img class="display" src=../"assets/img/fullineColourCamel.png">
+          <img class="display" src="../assets/img/creaseRenders.png">
+          <img class="display" src="../assets/img/fog_Terrain_map_2_birds_eye.png">
     </container>
  </body>
 </html>   
