--- a/_includes/CompSci_pg.html
+++ b/_includes/CompSci_pg.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <title>Liam May Portfolio</title>
-  <link rel="stylesheet" href="assets/css/stylesheet.css">
+  <link rel="stylesheet" href="../assets/css/stylesheet.css">
 
  </head>
  <body>
@@ -15,7 +15,7 @@
           </button>
         </form>
        </a>
-  <li><a href="index.html">Home page</a>
+  <li><a href="../index.html">Home page</a>
   <li><a href="ProdDesign.html">Product Design</a>
   <li><a href="CompSci.html">Computer science</a>
      <li><a href="CompSciGraphics.html">Computer Graphics Work.</a>
