--- a/_includes/CompSciGraphics_pg.html
+++ b/_includes/CompSciGraphics_pg.html
@@ -44,7 +44,7 @@
        <img class="display" src="../assets/img/Cover Page.png">
        <img class="display" src="../assets/img/front.png">
        <img class="display" src="../assets/img/fulllineTexCamel.png">
-         <img class="display" src=../"assets/img/fullineColourCamel.png">
+         <img class="display" src="../assets/img/fullineColourCamel.png">
           <img class="display" src="../assets/img/creaseRenders.png">
           <img class="display" src="../assets/img/fog_Terrain_map_2_birds_eye.png">
     </container>
