--- a/_includes/ProdDesign_pg.html
+++ b/_includes/ProdDesign_pg.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <title>Liam May Portfolio</title>
-  <link rel="stylesheet" href="../css/stylesheet.css">
+  <link rel="stylesheet" href="../assets/css/stylesheet.css">
   <style>
 
 div.athc_bx1 {
