--- a/_includes/CompSciGraphics_pg.html
+++ b/_includes/CompSciGraphics_pg.html
@@ -30,22 +30,30 @@
     <container class="display">
        
      
-       <script>
+     <!--  
+     <script>
           function dispFunction(item) {
-            <img class="display" src=item>;
+            return (<img class="display" src=item>);
          }
    
           var fs = require('fs');
-          var files = fs.readdirSync('/assets/img/*.png');
+          var files = fs.readdirSync("../assets/img/*.png");
           files.foreach(dispFunction)
 
-      </script>
+      </script> -->
+      
+      <h2>OpenGL 2</h2>
+      <p> Ray tracing</p>
         <img class="display" src="../assets/img/123952925_378322100271065_242517795086135743_n.png">
+          <h2>OpenGL 4</h2>
+            <p>Skeleton rigging and animations</p>
        <img class="display" src="../assets/img/Cover Page.png">
+         <p>Non-Realistic Rendering</p>
        <img class="display" src="../assets/img/front.png">
        <img class="display" src="../assets/img/fulllineTexCamel.png">
          <img class="display" src="../assets/img/fullineColourCamel.png">
           <img class="display" src="../assets/img/creaseRenders.png">
+                   <p>Terrain Generation</p>
           <img class="display" src="../assets/img/fog_Terrain_map_2_birds_eye.png">
     </container>
  </body>
