--- a/_includes/ProdDesign_pg.html
+++ b/_includes/ProdDesign_pg.html
@@ -68,7 +68,7 @@ div.athc_bx4 {
 
     
 <!-- Content section -->
-<h1> Product Design Projects!</h1>
+<h1 class="title"> Product Design Projects!</h1>
    <h2> Product Design 2nd Year</h2>
    <ul>
        <li> Material investigation and matierals in design.
