--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -13,6 +13,29 @@ body {
    
 }
 
+.frame {
+display: grid;
+  background-color: none; /* Green */
+  border: none;
+  color: black;
+
+   grid-template-columns: 64.6% 10em;
+}
+
+        .text {
+		  grid-column: 1;
+		  grid-row: 1;
+		 
+		 
+		 }
+		 
+		.image{
+		  grid-column: 2;
+			grid-row: 1;
+	
+		}    
+ 
+
 ul.navbar {
           list-style-type: none;
     padding: 0;
@@ -28,7 +51,7 @@ ul.navbar {
     text-align: justify;
     top: 13em;
     left: 12em;
-    width: 55% }
+    width: 85% }
 
     p.sub {
     left: 16em;
@@ -73,6 +96,9 @@ ul.navbar {
     font-family: Helvetica, Geneva, Arial,
           SunSans-Regular, serif;
        top: 100em;
+       width: 55%;
+       position: inline-block;
+       
 }
 
 h3 {
@@ -112,7 +138,6 @@ address.site_signing{
  position: inline-block;
  right: 12em;   
       
-      
 }
 
     img.drag {
@@ -129,12 +154,17 @@ address.site_signing{
 
 container.display {
           
-          position: absolute;
+          position: inline-block;
           text-align: left;
           top: 13em;
           left: 12em;
           width: 55%;
           }
+          
+          
+
+          
+              
 
 img.display  {
           
@@ -146,7 +176,7 @@ img.display  {
 
 container.prof {
           
-          position: absolute;
+	
           text-align: right;
           top: 7em;
           left: 62%;
@@ -157,9 +187,9 @@ container.prof {
 
 img.prof  {
           
-          position: inline-block;
+		  position: inline-block;
           text-align: left;
-          width: 10em;
+          width: 100%;
           }
 credit.prof  {
           
@@ -171,16 +201,17 @@ credit.prof  {
 
 
   .sci-button .button {
-  display: absolute;
+ position: inline-block;
   border-radius: 4px;
   background-color: #3399ff;
   border: none;
   color: #FFFFFF;
-  text-align: center;
+ text-align: center;
   font-size: 14px;
-  padding: 2em;
-  width: 300px;
-  height: 2.5em;
+
+  width: 27.5%;
+ height: auto;
+
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
@@ -189,16 +220,16 @@ credit.prof  {
 }
 
   .prod-button .button {
-  display: absolute;
+position: inline-block;
   border-radius: 4px;
   background-color: #ff74ff;
   border: none;
   color: #FFFFFF;
   text-align: center;
   font-size: 14px;
-  padding: 2em;
-  width: 300px;
-  height: 2.5em;
+
+  width: 27.5%;
+ height: auto;
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
@@ -208,14 +239,14 @@ credit.prof  {
 }
 
  .dl-button .button {
-  display: inline-block;
-
+ 
+position: absolute
   background-color: #d9d9d6;
   border: 4px solid #ffcc00;
   color: black;
   text-align: center;
   font-size: 1em;
-  top-paddingL 9em;
+
   width: 150px;
  
   transition: all 0.5s;
