boarders done, need sticky nav bar

--- a/_includes/CompSciGraphics_pg.html
+++ b/_includes/CompSciGraphics_pg.html
@@ -6,7 +6,7 @@
 
  </head>
  <body>
-   
+   <div class="frame-pages">
 <!-- Site navigation menu -->
  <ul class="navbar">
      <li><a>
@@ -23,7 +23,8 @@
   <li><a href="links_pg.html">My hobbies: Exibition of me.</a>
 </ul>
 
-    
+      <div class="inner-frame">
+		   <div class="text">
     <!-- Content -->
     <h1 class="title"> A Showcase of my Coded Computer Graphics Work.</h1>
    
@@ -49,13 +50,17 @@
             <p>Skeleton rigging and animations</p>
        <img class="display" src="../assets/img/Cover Page.png">
          <p>Non-Realistic Rendering</p>
-       <img class="display" src="../assets/img/front.png">
-       <img class="display" src="../assets/img/fulllineTexCamel.png">
-         <img class="display" src="../assets/img/fullineColourCamel.png">
-          <img class="display" src="../assets/img/creaseRenders.png">
+          <div class="grid-image">
+     <div class="image-item-start"> <img class="display" src="../assets/img/front.png">     </div>
+        <div>  <img class="display" src="../assets/img/fulllineTexCamel.png">     </div>
+        <div>  <img class="display" src="../assets/img/fullineColourCamel.png">     </div>
+       <div class="image-item-end">   <img class="display" src="../assets/img/creaseRenders.png">     </div>     </div>
                    <p>Terrain Generation</p>
           <img class="display" src="../assets/img/fog_Terrain_map_2_birds_eye.png">
     </container>
+    </div>
+        </div>
+            </div>
  </body>
 </html>   
     
