--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -3,83 +3,144 @@
 
 }
 
-
+html {
+ background-color: #FFFFFF;
+}
 body {
-      padding-left: 11em;
+     
     font-family: Georgia, "Times New Roman",
           Times, serif;
     color: #000000;
+   
 
 	}
         
 .container {
+ position: sticky;
   background-color: none; /* Green */
   border: none;
   color: white;
   width: 150px;
-   
+  
+    
 }
 
 .frame {
   display: grid;
+	width: 65%;
   background-color: none; /* Green */
   border: none;
   color: black;
-  grid-template-columns: 64.6% 10em;
+  grid-template-columns: 10em 100% 11em;
+align-content: space-around;
+  top: 2em;
+    left: 1em;
+     text-align: left;
+    height: 100%;
+ 
+}
+
+.inner-frame {
+
+
+grid-column: 2;
+grid-row: 1;
+		   background-color: none; /* Green */
+		   border-right-style: solid;
+		   border-right-width: thin;
+		   border-right-color: #AAAAAA;
+		   border-left-style: solid;
+		   border-left-width: thin;
+		   border-left-color: #AAAAAA;
+		   padding-left: 5%;
+		   padding-right: 5%;
+		  
+	
+}
+
+
+.frame-pages {
+  display: grid;
+	width: 65%;
+  background-color: none; /* Green */
+  border: none;
+  color: black;
+  grid-template-columns: 10em 100%;
+align-content: space-around;
+  top: 2em;
+    left: 1em;
+     text-align: left;
+    height: 100%;
+ 
 }
 
         .text {
-		  grid-column: 1;
-		  grid-row: 1;
+		  
+		  grid-column: 2;
+		   background-color: #F7F7FD; /* Green */
+
+		   padding: 2.5em;
+		    margin-top:-2.5em;
 
 		 }
 		 
+
+		 
 		.image{
-		  grid-column: 2;
+		
+		  grid-column: 3;
 			grid-row: 1;
+			  margin-left: 1em;
+			   margin-top: 3.5em;
 	
 		}    
- 
+		
+	
+
 
 ul.navbar {
+
+ position: sticky;
     list-style-type: none;
     padding: 0;
     margin: 0;
-    position: absolute;
+  grid-column: 1;
+  grid-row: 1;
     color: #000000;
-    top: 2em;
+    top: 4em;
     left: 1em;
     width: 9em;
-background-color: none;
+background-color: #FFFFFF;
 	height: var(--height);
-   border-right-style: solid;
-   border-right-width: thin;
-   border-right-color: #AAAAAA;
+	  margin-top: -2.5em;
+	  padding-top: 5.5em;
+	
+   
     }
 
 
        p.bio {
     text-align: justify;
     top: 13em;
-    left: 12em;
-    width: 85% }
+   
+   }
 
     p.sub {
     left: 16em;
-    top: 100em;;
-    width: 55% }
+    top: 100em;
+    }
 
        p.motivation {
     text-align: justify;
     top: 13em;
-    left: 12em;
-    width: 55% }
+
+   }
 
     p.info {
     text-align: justify;
     top: 13em;
-    left: 12em;
-    width: 55% }
+  
+    width: 85% }
 
         h1.title {
     font-family: Helvetica, Geneva, Arial,
@@ -132,11 +193,11 @@ h4 {
 }
 
   ul.navbar li {
-    background: white;
+    background: #F8F8FA;
     margin: 0.5em;
     padding: 0.3em;
     border-right: 1em solid black;
-    border: 2px solid black;
+    border: 1px solid #E5E5F1;
     <!--padding-top: 4em;-->
     }
 
@@ -173,6 +234,28 @@ h4 {
 		  grid-column: 6;
 		  grid-row: 2;
 }
+
+
+.grid-image{
+	display: grid;
+	 grid-auto-flow: columns;
+	 grid-template-columns: repeat(2, 50%);
+	 text-align: center;
+	 width: 100%;
+
+	
+}
+
+.image-item-start {
+		  grid-column: 1;
+		  grid-row: 1;
+}
+
+.image-item-end {
+		grid-row: 2; 
+		
+}
+
 
 address.site_signing{
  position: inline-block;
@@ -221,8 +304,8 @@ container.prof {
           top: 7em;
           left: 62%;
           width: 10em;
-          
-          
+       
+
           }
 
 img.prof  {
@@ -236,6 +319,7 @@ credit.prof  {
           position: inline-block;
           text-align: left;
           font-size: 11px;
+           
           }
 
 
@@ -292,6 +376,23 @@ position: absolute
   transition: all 0.5s;
   cursor: pointer;
   float:left
+
+
+}
+
+svg.git-icon {
+	height: 16pt;
+	aspect-ratio: 1/1;
+	viewBox: 0 0 496 512;
+
+}
+
+ .git-button .button {
+ background-color: none;
+  border: none;
+  text-align: right;
+  font-size: 16px;
+ min-width: 150px;
 
 
 }
