--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -39,6 +39,18 @@ align-content: space-around;
     height: 100%;
  
 }
+.center {
+ display: grid;
+ grid-template-columns: 1fl;
+place-self: center;
+
+}	
+p.disclaimer {
+
+background-color: #EEDFDF;
+  text-align: center;
+  font-size: 11px;
+}
 
 .inner-frame {
 
@@ -71,11 +83,12 @@ align-content: space-around;
     left: 1em;
      text-align: left;
     height: 100%;
+     
  
 }
 
         .text {
-		  
+		 
 		  grid-column: 2;
 		   background-color: #F7F7FD; /* Green */
 
@@ -95,8 +108,6 @@ align-content: space-around;
 	
 		}    
 		
-	
-
 
 ul.navbar {
 
@@ -222,7 +233,7 @@ h4 {
 	 text-align: center;
 	 
 
-	width: 55%;
+	width: 100%;
 }
 
 .grid-item-start {
@@ -333,7 +344,7 @@ credit.prof  {
  text-align: center;
   font-size: 14px;
 
-  width: 27.5%;
+  width: 45%;
  height: auto;
 
   transition: all 0.5s;
@@ -352,7 +363,7 @@ position: inline-block;
   text-align: center;
   font-size: 14px;
 
-  width: 27.5%;
+  width: 45%;
  height: auto;
   transition: all 0.5s;
   cursor: pointer;
@@ -362,44 +373,37 @@ position: inline-block;
  float:left
 }
 
- .dl-button .button {
- 
-position: absolute
-  background-color: #d9d9d6;
-  border: 4px solid #ffcc00;
-  color: black;
-  text-align: center;
-  font-size: 1em;
-
-  width: 150px;
- 
-  transition: all 0.5s;
-  cursor: pointer;
-  float:left
-
-
-}
 
 svg.git-icon {
 	height: 16pt;
 	aspect-ratio: 1/1;
 	viewBox: 0 0 496 512;
+	text-align: left;
 
 }
 
- .git-button .button {
- background-color: none;
-  border: none;
-  text-align: right;
+ .nav-button {
+ background: #F5F5FA;
+border: rgba(0, 0, 0,1);
+
+  border-radius: 6px;
+  text-align: center;
   font-size: 16px;
- min-width: 150px;
+	width: 7.3em;
+  cursor: pointer;
 
+}
+.nav-button:hover {
+  background: #F1F1F9;
+}
 
+.nav-button:active {
+  background: #FCFCFF;
 }
 
  .button {
   display: inline-block;
-  border-radius: 4px;
+  border-radius: 5px;
   background-color: #cccccc;
   border: none;
   color: #FFFFFF;
