format fix compSci

--- a/_includes/CompSci_pg.html
+++ b/_includes/CompSci_pg.html
@@ -23,13 +23,9 @@
  </head>
  <body >
    
-  <svg class="git-icon" viewBox="0 0 496 512">
-  <image  href="../assets/icon/cv.svg" />
-</svg>   
-   
    
 <!-- Site navigation menu -->
-<div class="frame-pages">
+<div class="frame">
 	
 
         
@@ -90,12 +86,22 @@ My hobbies: Exhibion of me</span>
 
 </ul>
 
-    
+    	<div class="image">
+		  
+	<container class="prof">
+	   <img class="prof" src="../assets/img/Liam_DP.jpg">
+	  
+	<!-- Sign and date the page, it's only polite! -->
+	<credit class="prof"> Christchurch, New Zealand <br> Date of Birth: 26/03/1995 <br> Qualificatinos from the <br>University of Canterbury: <br>Postgraduate Diploma  of Computer Science  <br> Bachelor of Industrial Product Design  <br> Bachelor of Computer Science  <br> <em>Made 30 Augaust 2021<br>
+	  by Liam K. May.</em>
+	</credit >
+	</container>
+	</div>
     <div class="inner-frame">
 		
      <div class="text">
     <!-- Content -->
-    <h1 class="title"> A compeadium of my computer science <br>enducation and my interest in the field.</h1>
+    <h1 class="title"> A compeadium of my computer science enducation and my interest in the field.</h1>
     
 
    
