--- a/_includes/ProdDesign_pg.html
+++ b/_includes/ProdDesign_pg.html
@@ -53,7 +53,7 @@ div.athc_bx4 {
 <body>
   
 <!-- Site navigation menu -->
- <div class="frame-pages">
+ <div class="frame">
 
         
  <ul class="navbar" >
@@ -112,6 +112,20 @@ My hobbies: Exhibion of me</span>
         </form></div>
 </ul>
  
+ 
+ 	<div class="image">
+		  
+	<container class="prof">
+	    <img class="prof" src="../assets/img/Liam_DP.jpg">
+	  
+	<!-- Sign and date the page, it's only polite! -->
+	<credit class="prof"> Christchurch, New Zealand <br> Date of Birth: 26/03/1995 <br> Qualificatinos from the <br>University of Canterbury: <br>Postgraduate Diploma  of Computer Science  <br> Bachelor of Industrial Product Design  <br> Bachelor of Computer Science  <br> <em>Made 30 Augaust 2021<br>
+	  by Liam K. May.</em>
+	</credit >
+	</container>
+	</div>
+	
+	
   <div class="inner-frame">
 	   <div class="text">
     <!-- Content section -->
