--- a/_includes/CompSciGraphics_pg.html
+++ b/_includes/CompSciGraphics_pg.html
@@ -6,7 +6,7 @@
 
  </head>
  <body>
-   <div class="frame-pages">
+   <div class="frame">
 <!-- Site navigation menu -->
 
         
@@ -65,7 +65,17 @@ My hobbies: Exhibion of me</span>
           </button>
         </form></div>
 </ul>
-
+	<div class="image">
+		  
+	<container class="prof">
+	   <img class="prof" src="../assets/img/Liam_DP.jpg">
+	  
+	<!-- Sign and date the page, it's only polite! -->
+	<credit class="prof"> Christchurch, New Zealand <br> Date of Birth: 26/03/1995 <br> Qualificatinos from the <br>University of Canterbury: <br>Postgraduate Diploma  of Computer Science  <br> Bachelor of Industrial Product Design  <br> Bachelor of Computer Science  <br> <em>Made 30 Augaust 2021<br>
+	  by Liam K. May.</em>
+	</credit >
+	</container>
+	</div>
       <div class="inner-frame">
 		   <div class="text">
     <!-- Content -->
