added newer content for weta

--- a/_includes/CompSciGraphics_pg.html
+++ b/_includes/CompSciGraphics_pg.html
@@ -71,8 +71,11 @@ My hobbies: Exhibion of me</span>
 	   <img class="prof" src="../assets/img/Liam_DP.jpg">
 	  
 	<!-- Sign and date the page, it's only polite! -->
-	<credit class="prof"> Christchurch, New Zealand <br> Date of Birth: 26/03/1995 <br> Qualificatinos from the <br>University of Canterbury: <br>Postgraduate Diploma  of Computer Science  <br> Bachelor of Industrial Product Design  <br> Bachelor of Computer Science  <br> <em>Made 30 Augaust 2021<br>
-	  by Liam K. May.</em>
+	<credit class="prof"><br>  Christchurch, New Zealand <br> Date of Birth: 26/03/1995 <br>
+     Qualificatinos from the <br>University of Canterbury: <br>
+     Postgraduate Diploma  of Computer Science  <br>
+      Bachelor of Industrial Product Design  <br> Bachelor of Computer Science  <br> 
+ 
 	</credit >
 	</container>
 	</div>
@@ -103,17 +106,29 @@ My hobbies: Exhibion of me</span>
             <p>Skeleton rigging and animations</p>
        <img class="display" src="../assets/img/Cover Page.png">
          <p>Non-Realistic Rendering</p>
-          <div class="grid-image">
-     <div class="image-item-start"> <img class="display" src="../assets/img/front.png">     </div>
-        <div>  <img class="display" src="../assets/img/fulllineTexCamel.png">     </div>
-        <div>  <img class="display" src="../assets/img/fullineColourCamel.png">     </div>
-       <div class="image-item-end">   <img class="display" src="../assets/img/creaseRenders.png">     </div>     </div>
+          <div class="design-image">
+     <div class="image-item-start"> <img class="product-design" src="../assets/img/front.png">     </div>
+      
+        <div>  <img class="product-design" src="../assets/img/fullineColourCamel.png">     </div>
+        <div>  <img class="product-design" src="../assets/img/fulllineTexCamel.png">     </div>
+        <div >   <img class="product-design" src="../assets/img/lowpoly_crease endges camel.png">     </div>   
+        <div>   <img class="product-design" src="../assets/img/creaseRenders.png">     </div>  
+       
+        <div >   <img class="product-design" src="../assets/img/contouredRendering.png">     </div>   
+          </div>
+    
+       
                    <p>Terrain Generation</p>
           <img class="display" src="../assets/img/fog_Terrain_map_2_birds_eye.png">
     </container>
     </div>
         </div>
             </div>
+            <div class='frame'>
+              <address class="site_signing"> <em>Made 30 Augaust 2021<br>
+                  by Liam K. May.</em>
+                  </address>
+                </div>
  </body>
 </html>   
     
