--- a/_includes/CompSci_pg.html
+++ b/_includes/CompSci_pg.html
@@ -25,66 +25,68 @@
    
    
 <!-- Site navigation menu -->
-<div class="frame">
-	
-
-        
- <ul class="navbar" >
-     
-        
-      <li><div class="nav-button"> 
-         <form action="../index.html" method="get" target="_self" >
-          <button class="nav-button" <span><image   src="../assets/icon/home.svg" /><br>
-Home </span>
-          </button>
-        </form></div>
-        
-             <li><div class="nav-button"> 
-         <form action="ProdDesign_pg.html" method="get" target="_self" >
-          <button class="nav-button" <span><image   src="../assets/icon/design.svg" /><br>
-Product Design</span>
-          </button>
-        </form></div>
-        
-                     <li><div class="nav-button"> 
-         <form action="CompSci_pg.html" method="get" target="_self" >
-          <button class="nav-button" <span><image   src="../assets/icon/compsci.svg" /><br>
-Computer Science</span>
-          </button>
-        </form></div>
-        
-        
-
-                             <li><div class="nav-button"> 
-         <form action="CompSciGraphics_pg.html" method="get" target="_self" >
-          <button class="nav-button" <span><image   src="../assets/icon/graphics.svg" /><br>
-Computer Graphics Work</span>
-          </button>
-        </form></div>
-        
-
-        
-                             <li><div class="nav-button"> 
-         <form action="links_pg.html" method="get" target="_self" >
-          <button class="nav-button" <span><image   src="../assets/icon/hobbies.svg" /><br>
-My hobbies: Exhibion of me</span>
-          </button>
-        </form></div>
-        
-  <li> <div class="nav-button"> 
-  <form action="https://github.com/thetriangletrippa/Portfolio" method="get" target="_blank"> 
-    <button class="nav-button" style="vertical-align:middle"><svg  class="git-icon" viewBox="0 0 496 512"><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/></svg>
- <br> GitHub</button>
-  </form></div>
   
-       <li><div class="nav-button"> 
-         <form action="https://raw.githubusercontent.com/TheTriangleTrippa/Portfolio/5ac76c2d99d8d941c1ced57cc7c362c4fdcf9eac/LIAM-MAY-CV.pdf" method="get" target="_blank" >
-          <button class="nav-button" <span><image   src="../assets/icon/cv.svg" /><br>
- My CV</span>
-          </button>
-        </form></div>    
+
+
+
+<div class="frame">
+  <ul class="navbar" >
+  
+        
+    <li><div class="nav-button"> 
+       <form action="../index.html" method="get" target="_self" >
+        <button class="nav-button" <span><image   src="../assets/icon/home.svg" /><br>
+Home </span>
+        </button>
+      </form></div>
+      
+           <li><div class="nav-button"> 
+       <form action="ProdDesign_pg.html" method="get" target="_self" >
+        <button class="nav-button" <span><image   src="../assets/icon/design.svg" /><br>
+Product Design</span>
+        </button>
+      </form></div>
+      
+                   <li><div class="nav-button"> 
+       <form action="CompSci_pg.html" method="get" target="_self" >
+        <button class="nav-button" <span><image   src="../assets/icon/compsci.svg" /><br>
+Computer Science</span>
+        </button>
+      </form></div>
+      
+      
+
+                           <li><div class="nav-button"> 
+       <form action="CompSciGraphics_pg.html" method="get" target="_self" >
+        <button class="nav-button" <span><image   src="../assets/icon/graphics.svg" /><br>
+Computer Graphics Work</span>
+        </button>
+      </form></div>
+      
+
+      
+                           <li><div class="nav-button"> 
+       <form action="links_pg.html" method="get" target="_self" >
+        <button class="nav-button" <span><image   src="../assets/icon/hobbies.svg" /><br>
+My hobbies: Exhibion of me</span>
+        </button>
+      </form></div>
+      
+<li> <div class="nav-button"> 
+<form action="https://github.com/thetriangletrippa/Portfolio" method="get" target="_blank"> 
+  <button class="nav-button" style="vertical-align:middle"><svg  class="git-icon" viewBox="0 0 496 512"><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3 .3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5 .3-6.2 2.3zm44.2-1.7c-2.9 .7-4.9 2.6-4.6 4.9 .3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3 .7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3 .3 2.9 2.3 3.9 1.6 1 3.6 .7 4.3-.7 .7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3 .7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3 .7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/></svg>
+<br> GitHub</button>
+</form></div>
+
+     <li><div class="nav-button"> 
+       <form action="https://raw.githubusercontent.com/TheTriangleTrippa/Portfolio/5ac76c2d99d8d941c1ced57cc7c362c4fdcf9eac/LIAM-MAY-CV.pdf" method="get" target="_blank" >
+        <button class="nav-button" <span><image   src="../assets/icon/cv.svg" /><br>
+My CV</span>
+        </button>
+      </form></div>    
 
 </ul>
+
 
     	<div class="image">
 		  
@@ -92,8 +94,11 @@ My hobbies: Exhibion of me</span>
 	   <img class="prof" src="../assets/img/Liam_DP.jpg">
 	  
 	<!-- Sign and date the page, it's only polite! -->
-	<credit class="prof"> Christchurch, New Zealand <br> Date of Birth: 26/03/1995 <br> Qualificatinos from the <br>University of Canterbury: <br>Postgraduate Diploma  of Computer Science  <br> Bachelor of Industrial Product Design  <br> Bachelor of Computer Science  <br> <em>Made 30 Augaust 2021<br>
-	  by Liam K. May.</em>
+	<credit class="prof"><br>  Christchurch, New Zealand <br> Date of Birth: 26/03/1995 <br>
+     Qualificatinos from the <br>University of Canterbury: <br>
+     Postgraduate Diploma  of Computer Science  <br>
+      Bachelor of Industrial Product Design  <br> Bachelor of Computer Science  <br>
+ 
 	</credit >
 	</container>
 	</div>
@@ -154,16 +159,22 @@ I have dabbled in low level python coding and have a keen interest in developing
      
     I have understnading off all the basic aespects of using java as an object orintated programming language and how they might be implicated -
       this leads to windows, and management/handeling of these UIs. 
+      this game is hosted here: . 
    </p>
   
    <h2 id="html_id"> HTML:</h2>
-   <p class="info">give some examples of a few differn we pages of this website i have made with a varity of themes.
-     iamges of this web page in development.
+   <p class="info"> This portfolio is an ecample for my HTML coding - with touches of javascipt. It was here that I tought myself from a Jerkyll interface intally on git, how to setup the basis of a website interface - thought his was primainrly so I could get it hosted on the github pages simiarly to how to is here today. Recognsiing there to be no need for a dynamic website, I stripped jerkyll, this leaft a static webpage as seen here today.
+    THe next phse of my webdevelopment are to implement a react element redesingign the webpage using modern tools. 
+
   </p>
    </div>
    </div>
   </div>
-	  
+  <div class='frame'>
+    <address class="site_signing"> <em>Made 30 Augaust 2021<br>
+        by Liam K. May.</em>
+        </address>
+      </div>
  </body>
 </html>   
     
