adding content for weta chair

--- a/_includes/ProdDesign_pg.html
+++ b/_includes/ProdDesign_pg.html
@@ -239,7 +239,13 @@ My hobbies: Exhibion of me</span>
      the gernated bike mount to meet this defined prequsite.  The design was model with consdieration of a real bike to with weights to scale for testing. In this assingment, 
      I changed groups betwween phases 1 and 2 working froma differnt base point.
 </p>
-
+<div class="design-image">
+ 
+  <div class="image-item-start"> <img class="product-design" src="../assets/img/front chair.JPG">     </div>
+  <div > <img class="product-design" src="../assets/img/chair_closing.JPG">     </div>
+     <div>  <img class="product-design" src="../assets/img/folded_side_chair.JPG">     </div>
+   
+ </div> 
 
    <!-- <iframe src="https://uclive352.autodesk360.com/shares/public/SH919a0QTf3c32634dcf7c0eccdc215b43a7?mode=embed" width="640" height="480" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"  frameborder="0"></iframe>
  -->
@@ -268,18 +274,22 @@ My hobbies: Exhibion of me</span>
   seccond part of the assingmetn was completed by myself without any support from other emmebers of the group - this includedhte fulll development process fo the design, 
   final cad work and technical drawing packages as well as the bulk of the portfolio. 
 </p>
-
-<div class="design-image">
-  <div class="image-item-start"> <img class="product-design" src="../assets/img/front.png">     </div>
-     <div>  <img class="product-design" src="../assets/img/fulllineTexCamel.png">     </div>
-     <div>  <img class="product-design" src="../assets/img/fullineColourCamel.png">     </div>
-    <div >   <img class="product-design" src="../assets/img/lowpoly_crease endges camel.png">     </div>  
-    <div >   <img class="product-design" src="../assets/img/creaseRenders.png">     </div>   
-    <div >   <img class="product-design" src="../assets/img/contouredRendering.png">     </div>      </div>
-
+<p class="info"> Electric Knife Final Concept Design: </p>
+<div >   <img width="100%" src="../assets/img/Final Concept - Prod213 - elctric knife.png">     </div>  
+<p class="info">  Electric Knife Final Design Soloution: </p>
+<div class="knife-image">
+ 
+  <div class="image-item-start"> <img class="knife-design" src="../assets/img/open internals.jpg">     </div>
+  <div > <img class="knife-design" src="../assets/img/whole-knife-unit-top.png">     </div>
+     <div>  <img class="knife-design" src="../assets/img/open_finnedtop_whole_knife.png">     </div>
+     <div>  <img class="knife-design" src="../assets/img/FINAL-nternalc-omponants .png">     </div>
+     <div>  <img class="knife-design" src="../assets/img/blade-lock-exposed-isoloated open.png">     </div>
+    <div >   <img class="knife-design" src="../assets/img/blade-lock-exposed-isoloated.png">     </div>  
+   
  </div> 
   </div> 
     </div> 
+  </div> 
     <div class='frame'>
       <address class="site_signing"> <em>Made 30 Augaust 2021<br>
           by Liam K. May.</em>
