adding content for weta fixed browser wanting

--- a/_includes/CompSciGraphics_pg.html
+++ b/_includes/CompSciGraphics_pg.html
@@ -60,7 +60,7 @@ My hobbies: Exhibion of me</span>
       
      <li><div class="nav-button"> 
          <form action="https://raw.githubusercontent.com/TheTriangleTrippa/Portfolio/5ac76c2d99d8d941c1ced57cc7c362c4fdcf9eac/LIAM-MAY-CV.pdf" method="get" target="_blank" >
-          <button class="nav-button" <span><image   src="../assets/icon/cv.svg" /><br>
+          <button class="nav-button"> <span><image   src="../assets/icon/cv.svg" /><br>
  My CV</span>
           </button>
         </form></div>
@@ -80,6 +80,9 @@ My hobbies: Exhibion of me</span>
 	</container>
 	</div>
       <div class="inner-frame">
+        <div class="center">
+          <p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page.</p>
+             </div>
 		   <div class="text">
     <!-- Content -->
     <h1 class="title"> A Showcase of my Coded Computer Graphics Work.</h1>
