--- a/_includes/CompSci_pg.html
+++ b/_includes/CompSci_pg.html
@@ -103,7 +103,9 @@ My CV</span>
 	</container>
 	</div>
     <div class="inner-frame">
-		
+      <div class="center">
+        <p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page.</p>
+           </div>
      <div class="text">
     <!-- Content -->
     <h1 class="title"> A compeadium of my computer science enducation and my interest in the field.</h1>
