--- a/_includes/ProdDesign_pg.html
+++ b/_includes/ProdDesign_pg.html
@@ -128,6 +128,9 @@ My hobbies: Exhibion of me</span>
 	
 	
   <div class="inner-frame">
+    <div class="center">
+      <p class="disclaimer"> Note: If your brower is not up-to-date github will incorrectly render the page.</p>
+         </div>
 	   <div class="text">
     <!-- Content section -->
 <h1 class="title"> Product Design Projects!</h1>
