adding content for weta site signing

--- a/_includes/CompSciGraphics_pg.html
+++ b/_includes/CompSciGraphics_pg.html
@@ -128,7 +128,7 @@ My hobbies: Exhibion of me</span>
         </div>
             </div>
             <div class='frame'>
-              <address class="site_signing"> <em>Made 30 Augaust 2021<br>
+              <address class="site_signing"> <em>Updated 4 April 2024<br>
                   by Liam K. May.</em>
                   </address>
                 </div>
