made collapasble prodesign added weta content

--- a/_includes/CompSci_pg.html
+++ b/_includes/CompSci_pg.html
@@ -174,7 +174,7 @@ I have dabbled in low level python coding and have a keen interest in developing
   </div>
   <div class='frame'>
     <address class="site_signing"> <em>Updated 4 April 2024<br>
-        by Liam K. May.</em>
+      Made by Liam K. May.</em>
         </address>
       </div>
  </body>
