--- a/_includes/CompSciGraphics_pg.html
+++ b/_includes/CompSciGraphics_pg.html
@@ -129,7 +129,7 @@ My hobbies: Exhibion of me</span>
             </div>
             <div class='frame'>
               <address class="site_signing"> <em>Updated 4 April 2024<br>
-                  by Liam K. May.</em>
+                Made by Liam K. May.</em>
                   </address>
                 </div>
  </body>
